[gd_scene load_steps=8 format=3 uid="uid://x374dgvmq5yi"]

[ext_resource type="Theme" uid="uid://1671t6soq8sy" path="res://days/day008/card_theme.tres" id="1_dokib"]
[ext_resource type="Texture2D" uid="uid://b2c5pdibls7my" path="res://days/day008/caveman_confused.png" id="2_d2pvl"]
[ext_resource type="Script" path="res://days/day008/card.gd" id="2_jfa5a"]

[sub_resource type="LabelSettings" id="LabelSettings_s54hl"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0r5qd"]
bg_color = Color(0.886275, 0.478431, 0, 1)
corner_radius_bottom_right = 30

[sub_resource type="Theme" id="Theme_q3lbh"]
Label/styles/normal = SubResource("StyleBoxFlat_0r5qd")

[sub_resource type="LabelSettings" id="LabelSettings_a2mmx"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 5
outline_color = Color(0.862745, 0.815686, 1, 1)

[node name="Card" type="Panel"]
custom_minimum_size = Vector2(210, 280)
offset_right = 210.0
offset_bottom = 280.0
theme = ExtResource("1_dokib")
script = ExtResource("2_jfa5a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 210.0
offset_bottom = 280.0
mouse_filter = 2
theme = ExtResource("1_dokib")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dokib")
text = "Caveman"
label_settings = SubResource("LabelSettings_s54hl")
horizontal_alignment = 1

[node name="HeroImage" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(70, 112)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_d2pvl")
expand_mode = 2
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(190, 120)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("1_dokib")
bbcode_enabled = true
text = "Spawns a single caveman
ATK: 1 DEF: 1 HP:5
"
fit_content = true

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 46.0
offset_bottom = 46.0
theme = SubResource("Theme_q3lbh")
text = "cost"
label_settings = SubResource("LabelSettings_a2mmx")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
